fix: Don't overflow on longer build names

--- a/war/src/main/less/base/layout-commons.less
+++ b/war/src/main/less/base/layout-commons.less
@@ -131,7 +131,8 @@ h1.build-caption.page-headline {
 
 h1.build-caption.page-headline > span {
   max-width: 1200px;
-  white-space: nowrap;
+  overflow: hidden;
+  line-height: 2.4rem;
   text-overflow: ellipsis;
 }
 
